--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 					<nav id="nav">
 					<a href="#" class="nav-opener"><span></span></a>
 					<div class="nav-drop">
-						<ul class="menu">
-							<li><a href="#">About Us</a></li>
-							<li><a href="#">Cases</a></li>
-							<li><a href="#">Contacts</a></li>
+						<ul class="menu" id="menu">
+							<li><a href="#puerDev">About Us</a></li>
+							<li><a href="#sosialNet">Cases</a></li>
+							<li><a href="#formSec">Contacts</a></li>
 						</ul> 
 					</div>
 				</nav>
@@ -59,7 +59,7 @@
 				</div>
 				<div class="wave"><img src="images/header_points.svg" alt=""></div>
 			</section>
-			<section class="puerDev-section">
+			<section class="puerDev-section" id="puerDev">
 				<div class="container">
 					<div class="headline">
 						<h2 class="wow fadeInLeft">PUERDEV IS MOBILE DEVELOPMENT PRODUCT COMPANY IN EASTERN EUROPE</h2>
@@ -137,7 +137,7 @@
 							<li class="left-l4 wow fadeIn" data-wow-delay="0.7s">Keeps you connected</li>
 						</ul>
 						<div class="circle-img1 wow fadeIn">
-							<img class="circle-img" src="images/benefits_round.png" alt="benefits">
+							<img class="circle-img" src="images/benefits_round.svg" alt="benefits">
 						</div>
 						<ul class="right-col">
 							<li class="right-l1 wow fadeIn" data-wow-delay="0.5s">Helps you make the sale & be more responsive</li>
@@ -155,7 +155,7 @@
 							</li>
 						</ul>
 						<div class="circle-img2">
-							<img src="images/benefits_round_mob.png" alt="benefits">
+							<img src="images/benefits_round_mob.svg" alt="benefits">
 						</div>
 						<ul class="right-col">
 							<li class="right-l1">Transforms your business processes</li>
@@ -173,7 +173,7 @@
 					<div class="parallax-window"><span></span></div>
 					<div class="container">
 						<div class="col-holder">
-							<div class="col">
+							<div class="col" id="sosialNet">
 								<h1 class="wow fadeInLeft">Social network</h1>
 								<ul class="wow fadeInLeft" data-wow-delay="0.2s">
 									<li>Client: <span>Objective-C, Java</span></li>
@@ -405,7 +405,7 @@
 					<h2 class="wow fadeInRight">Bring your vision to life </h2>
 				</div>
 			</section>
-			<section class="form-section">
+			<section class="form-section" id="formSec">
 				<h4>Tell us about your needs</h4>
 				<div class="container">
 					<form id="form" class="form ajaxform" method="post" action="">
@@ -455,10 +455,10 @@
 					<span>PuerDev 2018. All rights reserved.</span>
 				</div>
 				<div class="social">
-					<a class="upwork" href="#">See us on Upwork</a>
+					<!-- <a class="upwork" href="#">See us on Upwork</a> -->
 					<a href="#"><i class="icon-upwork"></i></a>
-					<a href="#"><i class="icon-facebook"></i></a>
-					<a href="#"><i class="icon-linkedin"></i></a>
+					<a href="https://www.facebook.com/PuerDev"><i class="icon-facebook"></i></a>
+					<a href="https://www.linkedin.com/company/24776509"><i class="icon-linkedin"></i></a>
 				</div>
 				</div>
 			</div>
